--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <!-- Bathing sites main page -->
     <string name="bathing_sites">bathing sites</string>
     <string name="bath_img_description">bathing sign</string>
+    <string name="title_activity_new_bathing_site">New Bathing Site</string>
 
 </resources>
