--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="form_date_for_temp">Date for temp</string>
     <string name="error_no_name">Name is required!</string>
     <string name="error_no_position">Address OR latitude/longitude are required!</string>
+    <string name="error_invalid_lat">Range -90 to 90!</string>
+    <string name="error_invalid_long">Range -180 to 180!</string>
     
     <!-- New bathing site menu strings -->
     <string name="menu_clear">Clear</string>
