--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="title_current_weather">Current weather</string>
     <string name="getting_weather">Getting current weather…</string>
     <string name="description_weather_image">Current weather</string>
+    <string name="button_ok">OK</string>
 
     <!-- Settings strings -->
     <!-- Preference Titles -->
@@ -43,5 +44,8 @@
     <string name="weather_title">Weather data URL</string>
     <string name="default_weather_url">https://dt031g.programvaruteknik.nu/bathingsites/weather.php</string>
     <string name="default_weather_icon_url">https://openweathermap.org/img/w/</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
