--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,16 +47,17 @@
     <!-- Settings strings -->
     <!-- Preference Titles -->
     <string name="weather_header">Weather</string>
-
+    <string name="download_header">Download</string>
     <!-- Weather Preferences -->
     <string name="weather_title">Weather data URL</string>
     <string name="default_weather_url">https://dt031g.programvaruteknik.nu/bathingsites/weather.php</string>
     <string name="default_weather_icon_url">https://openweathermap.org/img/w/</string>
+    <!-- Download Preferences-->
+    <string name="download_title">Download bathing sites URL</string>
+    <string name="default_download_url">https://dt031g.programvaruteknik.nu/bathingsites/download/</string>
 
     <!-- Unicode strings -->
     <string name="degree_sign">\u00B0</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
