--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <!-- Universal menu strings -->
     <string name="menu_settings">Settings</string>
+    <string name="menu_download">Download</string>
 
     <!-- New bathing site form field strings -->
     <string name="form_name">Name</string>
